Fix card detail layout on tablet devices

--- a/src/app/card-detail/card-detail.component.scss
+++ b/src/app/card-detail/card-detail.component.scss
@@ -18,7 +18,7 @@
 .data-container {
     border-radius: 15px;
     min-width: 185px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .mobile .data-container {
@@ -62,11 +62,18 @@
 
 .image-container {
     max-width: min(300px, 43vh);
-}    
+    max-height: min(460px, 55.5vw, 65vh);
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.mobile .image-container {
+    max-height: unset;
+}
 
 @media screen and (max-height: 450px) {
     .image-container {
-        max-width: 61.75vh;
+        max-width: 42.75vh;
     }
 }
 
